--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
