--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "nouislider": "^15.5.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.14",
+    "vue-form-wizard": "^0.8.4",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.2.0",
     "vue2-transitions": "^0.2.3",
